Make navbar static and fix footer overlap

--- a/app/styles/_structure.scss
+++ b/app/styles/_structure.scss
@@ -1,25 +1,23 @@
 html {
-  min-height: 100%;
   position: relative;
+  min-height: 100%;
 }
 
 body {
-  background-color: $bgLight;
-  padding: $bodyPaddingTop 0 $bodyPaddingBottom 0;
-  min-height: 100%;
+  margin-bottom: $xb-footer-height;
+  background-color: $xb-default-bg;
   line-height: 1.43;
 }
 
 footer {
-  background-color: $primaryFontColor;
   position: absolute;
-  left: 0;
   bottom: 0;
   width: 100%;
+  height: $xb-footer-height;
+  background-color: $primaryFontColor;
   color: $grayLightColor;
   > .container {
-    padding-top: 40px;
-    padding-bottom: 30px;
+    padding-top: 50px;
 
     :first-child {
       img {
